<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/paddingLoginActivity"
    android:layout_marginBottom="@dimen/marginBottomLoginActivity"
    android:gravity="center"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/login_title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvLoginTitle" />

    <EditText
        android:id="@+id/login_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtInputLoginHint"/>

    <TextView
        android:id="@+id/password_title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvPasswordTitle" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtInputPasswordHint"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginIntervalLoginActivity"
        android:text="@string/txtButtonLoginTitle"/>

    <TextView
        android:id="@+id/remember_password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginIntervalLoginActivity"
        android:text="@string/txtRememberPassword"
        android:textStyle="italic"/>

    <ProgressBar
        android:id="@+id/authorizaton_progress_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="@dimen/marginIntervalLoginActivity" />

</LinearLayout>